Added content to the main page.

--- a/Website/index.html
+++ b/Website/index.html
@@ -18,8 +18,31 @@
 		<h1 id="main-title">Main page</h1>
 		
 		<div class="main">
-			<p>something</p>
-			<p>something</p>
+			<h2>Status</h2>
+			<p>Colour: </p>
+			<p>Brightness: </p>
+			<p>Pattern: </p>
+			<p>Energy saving mode: </p>
+			<p>Time active: </p>
+			
+			<h2>Change colour</h2>
+			
+			<h2>Change pattern</h2>
+			
+			<h2>Change brightness</h2>
+			<p>Brightness in percentage, 0 is off, 100 is fully bright.</p>
+			<form>
+				<input type="text" name="brightnessInput">
+				<input type="submit" value="submit">
+			</form>
+			
+			<h2>Change mode brightness</h2>
+			<p>Brightness in percentage, 0 is off, 100 is fully bright.</p>
+			<form>
+				<input type="text" name="brightnessModeInput">
+				<input type="submit" value="submit">
+			</form>
+			
 		</div>
 		
 
