--- a/Website/index.html
+++ b/Website/index.html
@@ -26,8 +26,16 @@
 			<p>Time active: </p>
 			
 			<h2>Change colour</h2>
-			
+            
+
 			<h2>Change pattern</h2>
+            <form>
+				<select>
+                    <option value="test">Test</option>
+                    <option value="test2">Test2</option>
+				</select>
+				<input type="submit" value="submit">
+			</form>
 			
 			<h2>Change brightness</h2>
 			<p>Brightness in percentage, 0 is off, 100 is fully bright.</p>
