--- a/Website/index.html
+++ b/Website/index.html
@@ -4,6 +4,7 @@
 		<link rel="stylesheet" type="text/css" href="main.css">
 		<link rel="icon" type="image/png" href="favicon.png" sizes="256x256">
 		<title>RGB Controller</title>
+        <script src="jquery-3.3.1.min.js"></script>
 	</head>
 	
 	<body>
