The list of patterns is now automatically requested from the API on load.

--- a/Website/index.html
+++ b/Website/index.html
@@ -32,10 +32,7 @@
 
 			<h2>Change pattern</h2>
             <form id="patternForm">
-				<select>
-                    <option value="test">Test</option>
-                    <option value="test2">Test2</option>
-				</select>
+				<select id="patternDropdown"></select>
 				<input type="submit" value="submit">
 			</form>
 			
