Added a footer with the names of the website builders.

--- a/Website/index.html
+++ b/Website/index.html
@@ -53,5 +53,9 @@
 				<input type="submit" value="submit">
 			</form>
 		</div>
+
+        <div class="footer">
+            <p>This website was made by: Zwen Erkelens, Thijs Wijnen and Arthur van Strien.</p>
+        </div>
 	</body>
 </html>
