Added a POST request to the brightness Mode Form.

--- a/Website/index.html
+++ b/Website/index.html
@@ -48,7 +48,7 @@
 			<h2>Change mode brightness</h2>
             <p class="error" id="brightnessModeError">-</p>
 			<p>Brightness in percentage, 0 is off, 100 is fully bright.</p>
-			<form id="brightnessModeInputForm">
+			<form id="brightnessModeForm">
 				<input type="text" name="brightnessModeInput">
 				<input type="submit" value="submit">
 			</form>
