The status data is now automatically requested on load.

--- a/Website/index.html
+++ b/Website/index.html
@@ -21,11 +21,12 @@
 		
 		<div class="main">
 			<h2>Status</h2>
-			<p>Colour: </p>
-			<p>Brightness: </p>
-			<p>Pattern: </p>
-			<p>Energy saving mode: </p>
-			<p>Time active: </p>
+			<span class="leftStatus">Colour: </span>                  <span class="rightStatus" id="color">-</span><br/>
+            <span class="leftStatus">Pattern: </span>                 <span class="rightStatus" id="pattern">-</span><br/>
+			<span class="leftStatus">Brightness: </span>              <span class="rightStatus" id="brightness">-</span><br/>
+            <span class="leftStatus">Power saving brightness: </span> <span class="rightStatus" id="saving_brightness">-</span><br/>
+ 			<span class="leftStatus">Power saving start time: </span> <span class="rightStatus" id="start_time">-</span><br/>
+			<span class="leftStatus">Power saving end time: </span>   <span class="rightStatus" id="end_time">-</span><br/>
 			
 			<h2>Change colour</h2>
             <p class="error" id="colorError">-</p>
