Added error reporting tot the get status and get pattern requests.

--- a/Website/index.html
+++ b/Website/index.html
@@ -21,6 +21,7 @@
 		
 		<div class="main">
 			<h2>Status</h2>
+            <p class="error" id="statusError">-</p>
 			<span class="leftStatus">Colour: </span>                  <span class="rightStatus" id="color">-</span><br/>
             <span class="leftStatus">Pattern: </span>                 <span class="rightStatus" id="pattern">-</span><br/>
 			<span class="leftStatus">Brightness: </span>              <span class="rightStatus" id="brightness">-</span><br/>
