--- a/Website/index.html
+++ b/Website/index.html
@@ -1,11 +1,17 @@
 <!Doctype HTML>
 <html>
 	<head>
+        <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
+
+        <!--CSS and Javascript needed for the spectrum colorpicker-->
+        <link rel="stylesheet" type="text/css" href="spectrum.css">
+        <script type="text/javascript" src="spectrum.js"></script>
+        <script type="text/javascript" src="spectrum_code.js"></script>
+
 		<link rel="stylesheet" type="text/css" href="main.css">
 		<link rel="icon" type="image/png" href="favicon.png" sizes="256x256">
 		<title>RGB Controller</title>
-        <script src="jquery-3.3.1.min.js"></script>
-        <script src="client.js"></script>
+        <script type="text/javascript" src="client.js"></script>
 	</head>
 	
 	<body>
@@ -31,6 +37,7 @@
 			
 			<h2>Change colour</h2>
             <p class="error" id="colorError">-</p>
+            <input type='text' id="full"/>
 
 			<h2>Change pattern</h2>
             <p class="error" id="patternError">-</p>
