Refactored the button names.

--- a/Website/index.html
+++ b/Website/index.html
@@ -47,7 +47,7 @@
             <p class="error" id="patternError">-</p>
             <form id="patternForm">
 				<select id="patternDropdown"></select>
-				<input type="submit" value="submit">
+				<input type="submit" value="Save pattern">
 			</form>
 			
 			<h2>Change brightness</h2>
@@ -55,7 +55,7 @@
 			<p>Brightness in percentage, 0 is off, 100 is fully bright.</p>
 			<form id="brightnessForm">
 				<input type="text" name="brightnessInput">
-				<input type="submit" value="submit">
+				<input type="submit" value="Save brightness">
 			</form>
 			
 			<h2>Change mode brightness</h2>
@@ -63,7 +63,7 @@
 			<p>Brightness in percentage, 0 is off, 100 is fully bright.</p>
 			<form id="brightnessModeForm">
 				<input type="text" name="brightnessModeInput">
-				<input type="submit" value="submit">
+				<input type="submit" value="Save brightness">
 			</form>
 
             <h2>Change mode time</h2>
